fusion des branches